sass: fix horizontal scrollbar

--- a/sass/components/hero.scss
+++ b/sass/components/hero.scss
@@ -13,7 +13,7 @@
         display: block;
         background-color: rgba(0, 0, 0, 0.5);
         backdrop-filter: hue-rotate(110deg);
-        padding: 10px;
+        padding: 0 0 10px 0;
         width: 100%;
         height: 100%;
     }
